--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,55 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+* {
+    box-sizing: border-box;
+  }
+  
+  :root {
+    --light-text: hsl(0, 15%, 8%);
+    --light-elem: hsl(0, 0%, 100%);
+    --light-input: hsl(0, 0%, 52%);
+    --background: hsl(0, 0%, 95%);
+    --loading: hsla(252, 33%, 41%, 0.91);
+    --footer-text: hsl(180, 87%, 26%);
+  }
+  
+  .darkmode {
+    --light-text: hsl(0, 0%, 100%);
+    --light-elem: hsl(209, 23%, 22%);
+    --background: hsl(207, 26%, 17%);
+    --loading: hsla(252, 34%, 74%, 0.91);
+    --footer-text: hsl(180, 79%, 37%);
+  }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+  body {
+    width: 100%;
+    height: 100%;
+    font-family: 'Nunito Sans', sans-serif;
+    color: var(--light-text);
+    background: var(--background );
+    margin: 0;
+  }
+  
+  .container {
+    max-width: 1280px;
+    margin: 0 auto;
+  }
+  
+  /* Loading Message */
+  .loading-msg, .error-msg {
+    position: relative;
+    height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 28px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    color: var(--loading);
+    text-align: center;
+  }
+  
+  .error-msg {
+    color: #d33939;
+    left: 770px;
+  }
+
+  
